# salary_service

./: Dockerfile  README.md  auth.py  database.py  docker-compose.yml  main.py  pyproject.toml  test_main.py
static/css/: style.css
static/js/: token.js
templates/: error.html  login.html  main.html  personal_data.html  salary.html  token.html
